update after siemens

--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \diviseur{lightgray}
 \vspace{\vspacing}
 \input{sections/exp_pro}
-\vspace{\vspacing}
+%\vspace{\vspacing}
 \diviseur{lightgray}
 \vspace{\vspacing}
 \input{sections/Formation}
@@ -59,7 +59,7 @@
     \vspace{\vspacing}
     \input{sections/Recherche/publications}
 \fi
-\vspace{\vspacing}
+% \vspace{\vspacing}
 \diviseur{lightgray}
 \vspace{\vspacing}
 \input{sections/assos}
@@ -85,6 +85,11 @@
 \if\recoSimulands1
 \newpage
 \includegraphics[width= 1.03\columnwidth]{images/recommendation_letter_zaccarie.pdf}
+\fi
+
+\if\recoBertin1
+\newpage
+\includegraphics[width= 1\columnwidth]{images/reco_bertin.pdf}
 \fi
 
 %test hack
