--- a/sections/assos.tex
+++ b/sections/assos.tex
@@ -1,60 +1,55 @@
 {\fontsize{15}{10}\selectfont \color{black} \textbf{Volunteering}}
 
-% %Ker'bab previous
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     2021 - 2022 & {\color{black} \vspace{-3mm} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Club Kebab}} \\
-%         & {\tiny \ding{110}} \textit{Weekly sale of a hundred homemade kebabs on campus} \\
-%         & {\tiny \ding{110}} \textit{Organizing the logistics and communication of each event} \\
-%         & {\tiny \ding{110}} \textit{Creating new partners relationship with local actors}
-% \end{tabular}
-
-% Ker'bab
+\if \Kebab 1 % Ker'bab
 {\color{black} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Kebab Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Weekly sale of a hundred of homemade kebabs on campus with a team of 8 other students.} \\
-    & {\tiny \ding{110}} \textit{\textbf{Organizing the logistics and communication} of each event with a focus on hygien and security.} \\
-    & {\tiny \ding{110}} \textit{Creating new partners relationship with local actors to have fresh products.}
+    & {\tiny \ding{110}} \textit{Led a team of 8 students to sell \textbf{200+ homemade kebabs weekly} on campus.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Managed logistics and communication} for events, ensuring hygiene and safety standards.} \\
+    & {\tiny \ding{110}} \textit{Established partnerships with local suppliers for fresh ingredients.}
 \end{tabular}
+\fi \fctsaut{206}
 
-%BDA
+
+\if \BDA 1 %BDA
 {\color{black} \textbf{Vice-President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/BdaIMTAtlantiqueBrest}{\textbf{Arts Committee}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{The Art Commitee is the organization which manages events and clubs on the campus. The Bureau is elected by students according to the capacity of a team to conduct art oriented events.} \\
-    & {\tiny \ding{110}} \textit{I \textbf{managed a team of 18 students} with respective broad roles. I managed this team through my term and filled paper to ensure the legal framework and security of all the events.} \\
-    & {\tiny \ding{110}} \textit{The events : concerts by students and local musicians, western France cultural events, a week of artistic events with local performers, a cultural trip in Amsterdam for 90 students.}
+    & {\tiny \ding{110}} \textit{\textbf{Led a team of 18 students} to organize and manage art-oriented events and clubs on campus, elected by students based on leadership and vision.} \\
+    & {\tiny \ding{110}} \textit{Ensured the \textbf{legal framework, smooth coordination and event security} throughout the term.} \\
+    & {\tiny \ding{110}} \textit{Coordinated events including student and local musician concerts, Western France cultural festivals, a week-long artistic event, and a \textbf{cultural trip to Amsterdam for 90 students}.}
 \end{tabular}
+\fi \fctsaut{205}
 
-\if \mainExp0
-%S&L
+
+\if \SeL 1 %S&L
 {\color{black} \textbf{Sound \& Light Manager}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/people/SL-IMT-Atlantique-Brest/100077578935962/}{\textbf{S\&L Club}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{\textbf{Technical installation of electrical equipment} providing sound and lighting for events, including acoustic preparation of amplifiers based on the venue and configuration of ambient lighting} \\
-    & {\tiny \ding{110}} \textit{Drafting \textbf{security files} for all events to prevent risks caused by the gathering of large crowds during events}
+    & {\tiny \ding{110}} \textit{\textbf{Set up and configured sound and lighting systems} for events, including acoustic tuning of amplifiers and ambient lighting designn and control.} \\
+    & {\tiny \ding{110}} \textit{Prepared \textbf{security plans} to ensure safety for large crowds at events.}
 \end{tabular}
-\fi
+\fi \fctsaut{204}
 
-\if \mainExp0
-%BDD
+
+\if \BDD 1 %BDD
 {\color{black} \textbf{Project Manager}} \hspace{5mm} \MYhref[myOrange]{https://bdd-imta.hubside.fr/}{\textbf{Sustainable Development Bureau}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
        & {\tiny \ding{110}} \textit{Bike-sharing projet : managing the renting system, maintaining the parc et do paperwork} \\
        & {\tiny \ding{110}} \textit{Orchard Project: Maintenance and planting of apple tree samplings on campus / teaching to students how to take care of an orchard} \\
 \end{tabular}
-\fi
+\fi \fctsaut{203}
 
-\if \mainExp0
-%Renovo
+
+\if \Renovo 1 %Renovo
 {\color{black} \textbf{Mathematics and Physics Teacher}} \hspace{5mm} \MYhref[myOrange]{https://www.renovo.fr/}{\textbf{Renovo}} \hfill {\color{black}\textbf{2016 - 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Teaching to classes of students from disadvantaged neighborhoods during the holidays} \\
-    & {\tiny \ding{110}} \textit{Cultural and inspiring outings in museum and local startups and companies with the students}
+    & {\tiny \ding{110}} \textit{\textbf{Taught Mathematics and Physics} to students from disadvantaged neighborhoods during holiday sessions.} \\
+    & {\tiny \ding{110}} \textit{Organized \textbf{cultural and educational outings} to museums, local startups, and companies to inspire students.}
 \end{tabular}
-\fi
+\fi \fctsaut{202}
 
-\if \mainExp0
-%Ensemble pour l'Avenir
-{\color{black} \textbf{Food Assistance}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \hfill {\color{black}\textbf{2012 - 2016}}\\ \vspace{1mm}
+
+\if \Avenir 1 %Ensemble pour l'Avenir
+{\color{black} \textbf{Food Assistance Volunteer}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \hfill {\color{black}\textbf{2012 - 2016}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Preparation and meal services of 150 covers per evening to homeless people during summer holidays}
+    & {\tiny \ding{110}} \textit{\textbf{Prepared and served 150 meals per evening} to homeless individuals during holiday periods.}
 \end{tabular}
-\fi
+\fi \fctsaut{201}
