--- a/sections/centres d'interet.tex
+++ b/sections/centres d'interet.tex
@@ -8,13 +8,13 @@
 {\fontsize{12}{10}\selectfont \hspace{3.8mm} Sports}\newline
 \vspace{-6mm}
 \begin{itemize}
-    \item[\tiny\ding{110}] \textit{karate black belt (8y), basket-ball in club (6y), biking (8y), thaï boxe (2y)}
+    \item[\tiny\ding{110}] \textit{karate - black belt (8y), basket-ball in club (8y), biking (8y), kickboxing (3y)}
 \end{itemize}
 
 \hspace{-2mm}
 \vspace{-6mm}
 {\fontsize{12}{10}\selectfont \hspace{3.8mm} Leisures}\newline
 \begin{itemize}
-    \item[\tiny\ding{110}] \textit{videogames' design (12y), bassist in a groupe (5y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
+    \item[\tiny\ding{110}] \textit{videogames' design (13y), bassist in a band (7y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
 \end{itemize}
 % \vspace{2mm}
