--- a/sections/exp_pro.tex
+++ b/sections/exp_pro.tex
@@ -1,94 +1,93 @@
 {\fontsize{15}{10}\selectfont \color{black} \textbf{Experience}}
 
-% Bertin Technologies
+\if \Siemens 1 % Siemens AG
+{\color{black} \textbf{Embedded Software Working Student}} \hspace{5mm} \MYhref[myOrange]{https://new.siemens.com}{\textbf{Siemens AG}} \hfill {\color{black}\textbf{March 2025 – August 2025}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Developed a \textbf{GitLab CI/CD testing pipeline} for validating embedded firmware.} \\
+    & {\tiny \ding{110}} \textit{\textbf{CAN communication monitoring} and integration testing in a Linux-based environment.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Preliminary threat model} for the system, identifying potential attack surfaces on firmware and CAN bus communication, and proposed mitigations based on STRIDE methodology.} \\
+\end{tabular}
+\fi
+
+
+\if \Velidar 1 % Velidar
+{\color{black} \textbf{Embedded System Engineer}} \hspace{5mm} \MYhref[myOrange]{https://www.linkedin.com/company/velidar/posts/?feedView=all}{\textbf{Velidar}} \hfill {\color{black}\textbf{September 2024 - December 2024}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Startup at \href{https://stationf.co/}{STATION F (world's biggest incubator)}, creating bike radars.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Prototyped radar products} from concept to release-ready with high quality.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Led a team of 7 students} from IMT Atlantique, fostering collaboration and technical growth.} \\
+    & {\tiny \ding{110}} \textit{Analyzed market trends to align products with demand.} \\
+\end{tabular}
+\fi
+\fctsaut{8}
+
+
+\if \Bertin 1 % Bertin Technologies
 {\color{black} \textbf{FPGA Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.bertin-technologies.com/}{\textbf{Bertin Technologies}} \hfill {\color{black}\textbf{March 2024 - August 2024}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Bertin Technologies is a French compnay which pursues technological advances in the fields of Nuclear, Defence, Space, Big Science, Life Sciences and Health.} \\
-    & {\tiny \ding{110}} \textit{Video enhancement algorithms R\&D : Reading research papers, \href{https://github.com/n2oblife/proto_video_algo_ir}{testing (matlab and python) and then \textbf{implementing in VHDL non uniformity correction} for the next generation of IR-camera}, \textbf{defective pixels detection algorithm with low ressources} in pre existing projects, \textbf{writing a driver and interuption process in C with a RISC-V}.} \\
-    & {\tiny \ding{110}} \textit{Shadowing of the product owner during meetings and project plannings.} \\
+    & {\tiny \ding{110}} \textit{French company specializing in Nuclear, Defence, Space, Big Science, and Health.} \\
+    & {\tiny \ding{110}} \textit{\textbf{R\&D in video enhancement algorithms}: \href{https://github.com/n2oblife/proto_video_algo_ir}{Tested (MATLAB/Python) and \textbf{implemented in VHDL non-uniformity correction}} for next-gen IR cameras, developed a \href{https://github.com/n2oblife/matlab_image_tools}{\textbf{defective pixel detection algorithm (low-resource)}, and wrote a \textbf{C driver for RISC-V communication}} for this very HW.} \\
+    & {\tiny \ding{110}} \textit{Shadowed product owner in meetings and project planning.} \\
 \end{tabular}
+\fi
+\fctsaut{7}
 
-%  SIMULANDS
-\if \mainExp0
+
+\if \Simulands 1 % SIMULANDS
 {\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - December 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
-    & {\tiny \ding{110}} \textit{Mixed Reality Software R\&D and development : SotA benchmark, implementing a \href{https://github.com/n2oblife/Le_ViP}{\textbf{Classical computer vision algorithm in C++ to segment and track surgical tools} with denoising and developpement of a position estimation algorithms} / \textbf{algorithm optimization and parallelization} to ensure \textbf{real time computation} / \textbf{designing software architecture accordingly to hardware} to improve computation / integration of the computer vision application in the previous pipeline between the video stream and Unity / building AR Unity scenes / gamifying procedures to ease the learning curve / cybersecurity consulting to enhance safety of the project} \\
-    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database on Azure / creating a pipeline to perform redundant statistic analysis instead of the marketing team / data analysis of the trainings to give insights} \\
-\end{tabular}
-\else
-{\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - December 2023}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
-    & {\tiny \ding{110}} \textit{Mixed Reality Software R\&D and development : SotA benchmark, implementing a \textbf{Classical computer vision algorithm in C++ to segment and track surgical tools} with denoising and developpement of a position estimation algorithms / \textbf{algorithm optimization and parallelization} / integration of the computer vision application in the previous project } \\
-    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database on Azure / creating a pipeline to perform statistic analysis} \\
+    & {\tiny \ding{110}} \textit{Swiss medtech startup developing Human Grade simulators with realistic procedural experiences and device performance insights.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Mixed Reality R\&D}: Implemented \href{https://github.com/n2oblife/Le_ViP}{\textbf{C++ computer vision algorithms for surgical tool tracking and denoising}}, optimized for \textbf{real-time computation}, designed \textbf{hardware-optimized software architecture}, integrated into Unity pipelines, built AR scenes, gamified procedures.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Database administration}: Migrated subcontractor database to Azure, created a \textbf{pipeline for redundant statistical analysis}, and conducted \textbf{training data analysis for insights}.} \\
 \end{tabular}
 \fi
+\fctsaut{6}
 
-% CEA
-\if \mainExp0
+
+\if \CEA 1 % CEA
 {\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://list.cea.fr/fr/}{\textbf{CEA List}} \hfill {\color{black} \textbf{April 2023 - August 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A research institute that focuses on digital systems to drive business competitiveness. Its Text and Image Analysis Laboratory studies Deep Learning models, their improvement and their use.} \\
-    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} from Stanford studies / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python using Adapter technology and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}} \\
-\end{tabular}
-\else 
-{\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://list.cea.fr/fr/}{\textbf{CEA List}} \hfill {\color{black} \textbf{April 2023 - August 2023}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A research institute that focuses on digital systems to drive business competitiveness. Its Text and Image Analysis Laboratory studies Deep Learning models, their improvement and their use.} \\
-    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} from Stanford studies / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python using Adapter technology and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}} \\
+    & {\tiny \ding{110}} \textit{Europe's leading patent-filing research lab, specializes in \textbf{digital systems and Deep Learning}.} \\
+    & {\tiny \ding{110}} \textit{Project: Researched a \textbf{state-of-the-art Transformer NLP model} / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developed a Python \textbf{training pipeline with Adapter technology and C++ conversion}} / trained using CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{\textbf{optimized C++ inference engine for high token computation frequency}} / integrated with \href{https://github.com/aymara/lima}{a multilingual NLP model} / ensured \textbf{documentation and sustainability}.} \\
 \end{tabular}
 \fi
+\fctsaut{5}
 
 
-% ResEl
-\if \mainExp0
+\if \Resel 1 % ResEl
 {\color{black} \textbf{Network Administrator, Secretary, Training Manager}} \hspace{5mm} \MYhref[myOrange]{https://resel.fr/}{\textbf{ResEl}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A technical association providing a network of +3K machines across two campuses on different cities, and enabling members to acquire essential technological skills. } \\
-    & {\tiny \ding{110}} \textit{Learning the ins and outs of project management in the field of network engineering as a \textbf{manager of a team of student administrators}. I also \textbf{ensured the legal framework of the association} and its events especially when planned with professional partners as board member.} \\
-    & {\tiny \ding{110}} \textit{Organizing events such as the Google Hash code and the FedeRez Days and seting training programs for students to learn from the basis of IT to advanced network skills.} \\
-    & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
-\end{tabular}
-\else
-{\color{black} \textbf{Network Administrator, Secretary, Training Manager}} \hspace{5mm} \MYhref[myOrange]{https://resel.fr/}{\textbf{ResEl}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A technical association providing a network of +3K machines across two campuses on different cities, and enabling members to acquire essential technological skills. } \\
-    & {\tiny \ding{110}} \textit{Learning the ins and outs of project management in the field of network engineering as a \textbf{manager of a team of student administrators}. I also \textbf{ensured the legal framework of the association} and its events especially when planned with professional partners as board member.} \\
-    & {\tiny \ding{110}} \textit{Organizing events such as the Google Hash code and the FedeRez Days and seting training programs for students to learn from the basis of IT to advanced network skills.} \\
-    & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
+    & {\tiny \ding{110}} \textit{Technical association managing a network of \textbf{3K+ machines across campuses} and offering members essential tech skills.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Managed a team of student administrators}, ensuring the \textbf{association's legal framework} and professional event compliance as a board member.} \\
+    & {\tiny \ding{110}} \textit{Organized events like \textbf{Google Hash Code} and \textbf{FedeRez Days}, and led IT training programs from basics to advanced networking.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Developed an inverter monitoring tool} as part of a key project.} \\
 \end{tabular}
 \fi
+\fctsaut{4}
 
-%PostExo
-\if \mainExp0
-{\color{black} \textbf{Right hand of the CEO}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \hfill {\color{black}\textbf{February 2022}}\\ \vspace{1mm}
+
+\if \Postexo 1 %PostExo
+{\color{black} \textbf{Right Hand of the CEO Intern}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \hfill {\color{black}\textbf{February 2022}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Automation of the registering process using the website and Zapier to schedule meetings} \\
-    & {\tiny \ding{110}} \textit{Process automation and website redesign} \\
-    & {\tiny \ding{110}} \textit{Establishment of communication strategies using social media / website redesign with more flexible architecture thought to be adaptable}
+    & {\tiny \ding{110}} \textit{\textbf{Automated the registration process} using the website and Zapier for scheduling.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Redesigned the website} with a flexible, adaptable architecture.} \\
+    & {\tiny \ding{110}} \textit{Developed \textbf{communication strategies} leveraging social media.} \\
 \end{tabular}
 \fi
+\fctsaut{3}
 
-%UberEats previous
-%\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%    De mars 2018 à août 2018 & {\color{black} \vspace{-3mm} \textbf{Livreur à vélo}} \hspace{5mm} \MYhref[myOrange]{https://www.ubereats.com/fr}{\textbf{UberEats}}
-%\end{tabular}
 
-%Institut Curie
-\if \mainExp0
-{\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \hfill {\color{black}\textbf{January 2015 - June 2015}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Shadowing researchers once a week, performing basic manipulations to maintain growth of cultures and electrophorese to split the groups according to genes presence, and delivering presentations on the results and on the work performed}
+\if \Uber 1 %UberEats previous
+\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+    De mars 2018 à août 2018 & {\color{black} \vspace{-3mm} \textbf{Livreur à vélo}} \hspace{5mm} \MYhref[myOrange]{https://www.ubereats.com/fr}{\textbf{UberEats}}
 \end{tabular}
 \fi
+\fctsaut{2}
 
-%SIMULANDS previous
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     October 2023 - March 2024 & {\color{black} \vspace{-3mm} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \\
-%         & \vspace{-6.5mm} {\tiny \ding{110}}
-%         \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights} \\
-%         & {\tiny \ding{110}} \textit{Developing a Mixed Reality Software : developing a model to track hands and surgical tools and a stereovision algorithm to estimate their position / designing hardware and software architecture and parallelizing the code to improve real time computation / optimizing the software setup / building a } \\
-%         & {\tiny \ding{110}} \textit{Database administration :} \\
-%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
-% \end{tabular}
+\if \Curie 1 %Institut Curie
+{\color{black} \textbf{Biology Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \hfill {\color{black}\textbf{January 2015 - June 2015}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{\textbf{Assisted biology researchers}, maintaining cultures, performing electrophoresis to analyze genes, and \textbf{delivered presentations} on findings.} \\
+\end{tabular}
+\fi
+\fctsaut{1}
