--- a/sections/informatiques.tex
+++ b/sections/informatiques.tex
@@ -5,27 +5,24 @@
 \vspace{-8mm}
 \hspace{-2mm}
 %Programmation
-{\fontsize{12}{10}\selectfont \hspace{3.7mm} Programming }\newline
+% TODO revoir les skills !!!!
+{\fontsize{12}{10}\selectfont \hspace{3.7mm} Technical Skills }\newline
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
-    \item[\tiny\ding{110}] \textit{Python, SQL, R, Matlab}
-    \item[\tiny\ding{110}] \textit{Java, C/C++, Rust, CMake}
-    \item[\tiny\ding{110}] \textit{Linux, bash, PowerShell}
-    \item[\tiny\ding{110}] \textit{VHDL RTL, TCL, FPGA, SystemC, RaspberryPi, ZedBoard}
-    \item[\tiny\ding{110}] \textit{PyTorch, LibTorch, AdapterHub}
-    \item[\tiny\ding{110}] \textit{sklearn}
-    \item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, CTranslate2, Stanza}
-    \item[\tiny\ding{110}] \textit{OpenMP, SIMD, Cuda}
-    \item[\tiny\ding{110}] \textit{OpenCV (C++)}
-    \item[\tiny\ding{110}] \textit{Unity, C\#, Hololens}
-    \item[\tiny\ding{110}] \textit{Network, Sysadmin, SNMP, Cisco}
-    \item[\tiny\ding{110}] \textit{HTML, CSS, Javascript, Bootstrap, Wordpress}
-    \item[\tiny\ding{110}] \textit{gitlab, CI/CD, Docker}
-    \item[\tiny\ding{110}] \textit{JetBrains Rider / Pycharm}
-    \item[\tiny\ding{110}] \textit{Graphic and CLI debugging}
-    \item[\tiny\ding{110}] \textit{Azure}
-    %\item[\tiny\ding{110}] \textit{Basics of RF antenna}
+    \item[\tiny\ding{110}] \textit{Python, C/C++, SQL, R, Matlab, Bash, PowerShell}
+    \item[\tiny\ding{110}] \textit{VHDL, SystemC, RISC-V, FPGA (Xilinx, Microsemi), Raspberry Pi}
+    \item[\tiny\ding{110}] \textit{Threat modeling (TAL, Octave, TARA ISO21434), Cryptology, Secure Communications}
+    \item[\tiny\ding{110}] \textit{PyTorch, TensorFlow, LibTorch, Scikit-learn, Convex Optimization, Bayesian Inference}
+    \item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, Stanza, CTranslate2}
+    % \item[\tiny\ding{110}] \textit{OpenCV (C++), Image/Video Compression (ASIC design), Vision Transformers}
+    \item[\tiny\ding{110}] \textit{OpenMP, CUDA, SIMD, Multicore Profiling}
+    \item[\tiny\ding{110}] \textit{CI/CD, Git, Docker, Static Code Analysis}
+    \item[\tiny\ding{110}] \textit{Linux, Kali, Sysadmin, SNMP}
+    % \item[\tiny\ding{110}] HTML, CSS, JavaScript, Bootstrap, WordPress}
+    \item[\tiny\ding{110}] \textit{Graphic/CLI Debugging, GoogleTest, lcov, Makefile, Performance Benchmarking, Embedded Trace Analysis}
+    \item[\tiny\ding{110}] \textit{Doxygen, YAML}
 \end{itemize}
+
 
 \vspace{2mm}
 \hspace{-2mm}
@@ -34,7 +31,7 @@
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Office Pack, Google Tools and AppScript}
-    \item[\tiny\ding{110}] \LaTeX \textit{, Doxygen}
+    \item[\tiny\ding{110}] \LaTeX \textit{, Markdown}
     \item[\tiny\ding{110}] \textit{Zapier, AirTable}
 \end{itemize}
 
@@ -45,7 +42,6 @@
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Adobe Premier / Photoshop / Audition, Gimp}
-    \item[\tiny\ding{110}] \textit{FLStudio}
-    \item[\tiny\ding{110}] \textit{OBS}
+    \item[\tiny\ding{110}] \textit{OBS / FLStudio}
 \end{itemize}
 \vspace{2mm}
