--- a/sections/variables.tex
+++ b/sections/variables.tex
@@ -1,9 +1,45 @@
 % This document manages the variables in the CV and needs to be put before each use if the variable
 
-\newcommand{\jobTitle}{ }
+% Mise en forme
+\newcommand{\moreinfo}{student job }
+\newcommand{\jobTitle}{0} % 0 => "Complete curriculum vitae"
+\newcommand{\starting}{March 2025}
 \newcommand{\papers}{0}
 \newcommand{\recherche}{0}
 \newcommand{\photo}{0}
 \newcommand{\mainExp}{0}
+
+% Saut de page en commentaire
+\newcommand{\sautdepagenumA}{105}
+\newcommand{\sautdepagenumB}{0}
+
+% Experience
+\newcommand{\Siemens}{1}    %9 - main
+\newcommand{\Velidar}{1}    %8
+\newcommand{\Bertin}{1}     %7 - main
+\newcommand{\Simulands}{1}  %6 - main
+\newcommand{\CEA}{1}        %5 - main
+\newcommand{\Resel}{1}      %4 - main
+\newcommand{\Postexo}{1}    %3
+\newcommand{\Uber}{0}       %2
+\newcommand{\Curie}{1}      %1
+
+% Education
+\newcommand{\TUM}{1}        %105
+\newcommand{\MIT}{1}        %104
+\newcommand{\IMT}{1}        %103
+\newcommand{\Prepa}{1}      %102
+\newcommand{\Henri}{1}      %101
+
+% Club
+\newcommand{\Kebab}{1}      %206 - main
+\newcommand{\BDA}{1}        %205 - main
+\newcommand{\SeL}{1}        %204 - main
+\newcommand{\BDD}{1}        %203
+\newcommand{\Renovo}{1}     %202
+\newcommand{\Avenir}{1}     %201
+
+% Recommandation
 \newcommand{\recoSEH}{0}
 \newcommand{\recoSimulands}{0}
+\newcommand{\recoBertin}{0}
