--- a/sections/formation.tex
+++ b/sections/formation.tex
@@ -1,70 +1,52 @@
 {\fontsize{15}{10}\selectfont {\color{black} \textbf{Education}}}
 
-% % MOOC ML previous
-% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
-%     February 2023 - May 2023 & {\color{black} \vspace{-3mm} \textbf{MicroMaster program in Statistics and Data Science}} \hspace{5mm} \MYhref[myOrange]{https://mitxonline.mit.edu/}{\textbf{MITx}} \\
-%         & \vspace{-6.5mm} {\tiny \ding{110}} \textit{\href{https://github.com/n2oblife/MITx-ML}{Machine Learning in Python : From Linear Models to Deep Learning} - 230h} \\
-%         & \vspace{-6.5mm} {\tiny \ding{110}} \textit{Course with slides and lab sessions teaching from Linear Classifier to Unsupervised and Reinforcement Learning with projects every week }
-% \end{tabular}
-
-
-%TUM
-{\color{black} \textbf{MSc. - Electronics and IT}} \hspace{5mm} \MYhref[myOrange]{https://www.tum.de/en/}{\textbf{Technical University of Munich}} \hfill {\color{black}\textbf{2024-2026}}\\ \vspace{1mm}
+\if \TUM 1 %TUM
+{\color{black} \textbf{MSc. - Electrical Engineering and IT}} \hspace{5mm} \MYhref[myOrange]{https://www.tum.de/en/}{\textbf{Technical University of Munich}} \hfill {\color{black}\textbf{2024-2026}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{1st-ranked university in Germany} \\
-    & {\tiny \ding{110}} \textit{\textbf{Courses} : embedded system for security, HW/SW codesign, machine learning. \textbf{Labs} : image and video Compression and high frequency system design. \textbf{Elective modules} : IoT security, ML and IT security, advanced cryptographic implementation, convex optimization, security in communication and storage} \\
+    & {\tiny \ding{110}} \textit{Courses : \href{https://github.com/n2oblife/ES-Secu}{embedded systems and security}, \textbf{HW/SW codesign}, ML and optimization.} \\ 
+    & {\tiny \ding{110}} \textit{Elective modules : convex optimization, \href{https://github.com/n2oblife/ESD4ML}{embedded system design for ML}, SW architecture for distributed systems, \href{https://github.com/n2oblife/adv_crypto}{\textbf{advanced crypto implementation}}, multicore processors, peer to peer security, security engineering, \href{https://github.com/n2oblife/cd4s}{\textbf{circuit design for security}}, \textbf{IoT security}, ML and IT security, seminar on processor design for AI.} \\
+    & {\tiny \ding{110}} \textit{Labs : \href{https://github.com/n2oblife/ivclab}{image/video compression} and security dedicated ASIC design for RISC-V.} \\
+    & {\tiny \ding{110}} \textit{Interdisciplinary : \textbf{intro to patent, trademark and law}.} \\
 \end{tabular}
+\fi \fctsaut{105}
 
-%MOOC ML
+\if \MIT 1 %MOOC ML
 {\color{black} \textbf{MicroMaster - Statistics and Data Science}} \hspace{5mm} \MYhref[myOrange]{https://mitxonline.mit.edu/}{\textbf{MITx}} \hfill {\color{black}\textbf{February 2023 - May 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{\href{https://github.com/n2oblife/MITx-ML}{Machine Learning in Python : From Linear Models to Deep Learning} - 230h} \\
-    & {\tiny \ding{110}} \textit{Slides and lab sessions teaching from \textbf{Linear Classifier and recommander systems to Unsupervised and Reinforcement Learning} with projects every week to apply the notions}
-\end{tabular}
-
-\if \mainExp0
-\mynewpage
-\vspace{1cm}
-\fi
-
-% IMT Atlantique
-\if \mainExp 0
-{\color{black} \textbf{MEng. - Embedded Systems, Excellence Program for Research}} \hspace{5mm} \MYhref[myOrange]{https://www.imt-atlantique.fr}{\textbf{IMT Atlantique}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{4th-ranked engineering school in France} \\
-    & {\tiny \ding{110}} \textit{Mathematics (measure theory, signal processing, Fourier analysis, stats and probabilities), Physics (wave theory and noise handling, telecomunication physics and RF, thermodynamic, fluidic mechanic, nuclear physic aplied to decision making in central),  \textbf{Computer Vision and denoising}, \textbf{Data management}, Sc Computing, \href{https://github.com/n2oblife/PyRat}{\textbf{graph theory}}, \href{https://github.com/n2oblife/TSP_genetic}{logistic optimization}.} \\ % Mathematics, Physics,  Sensor, LP Problems, Sc Computing, Management, Project Management, Machine Vision, Image Processing, graph theory, Developement, logistic opitmization, Data Manipulation
-    & {\tiny \ding{110}} \textit{Embedded Systems: \textbf{Algorithm-to-Chip Design \& Processors Architecture Design} with theory and a pratical project on image processing in real time using vhdl, Low-Level Software-Hardware Interactions with driver implementation in C++, High Level Synthesis Lab sessions using SysteemC \href{https://github.com/n2oblife/galax}{\textbf{Parallel Computing}} theory and bottlenecks studies, \href{https://github.com/n2oblife/SDM}{Stochastic Dynamic Modeling} and Baysian inference, \href{https://github.com/n2oblife/EFDL}{\textbf{Deep Learning Optimization}} through the teaching methods and inference computation time and power} \\
-%    & {\tiny \ding{110}} \textit{Cybersécurité : } \\
-    & {\tiny \ding{110}} \textit{School Projects: \href{https://github.com/n2oblife/DevOps_Orange}{\textbf{DevOps of a Deep Learning based audio measurement service in Docker} and .deb} with \href{https://www.orange.com}{Orange (telecom company)} / preliminary study of an electronic waste recycling startup} \\
-    & {\tiny \ding{110}} \textit{Research Projects: \href{https://github.com/n2oblife/Fast_Resolution_Algorithm}{Implementation of a \textbf{Fast resolution algorithm in C++ to compute eeg signals in real time}} / \textbf{state-of-the-art in ML comparing CNN and Vision Transformer in term of inference time and ressources consumption} / course given by myself on \href{https://ieeexplore.ieee.org/document/8610326}{Inversible CMOS Logic} to introduce this field of research to students in order to follow a Naoya Onizawa conference}
-\end{tabular}
-\else 
-{\color{black} \textbf{Master in Engineering specialized in Embedded Systems, Excellence Program for Research}} \hspace{5mm} \MYhref[myOrange]{https://www.imt-atlantique.fr}{\textbf{IMT Atlantique}} \hfill {\color{black}\textbf{2021 - 2025}}\\ \vspace{1mm}
-\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{5th-ranked engineering school in France.} \\
-    & {\tiny \ding{110}} \textit{Mathematics, \textbf{Computer Vision}, \textbf{Data}, Sc Computing, \href{https://github.com/n2oblife/PyRat}{\textbf{graph theory}}, \href{https://github.com/n2oblife/TSP_genetic}{logistic optimization}.} \\ % Mathematics, Physics,  Sensor, LP Problems, Sc Computing, Management, Project Management, Machine Vision, Image Processing, graph theory, Developement, logistic opitmization, Data Manipulation
-    & {\tiny \ding{110}} \textit{Embedded Systems: \textbf{Algorithm-to-Chip Design \& Architecture}, Low-Level Software-Hardware Interactions, \href{https://github.com/n2oblife/galax}{\textbf{Parallel Computing}}, \href{https://github.com/n2oblife/SDM}{Stochastic Dynamic Modeling}, \href{https://github.com/n2oblife/EFDL}{\textbf{Deep Learning Optimization and compression}}.} \\
-%    & {\tiny \ding{110}} \textit{Cybersécurité : } \\
-    & {\tiny \ding{110}} \textit{School Projects: \href{https://github.com/n2oblife/DevOps_Orange}{\textbf{DevOps of a Deep Learning based audio measurement service in Docker} and .deb} with \href{https://www.orange.com}{Orange (telecom company)} / preliminary study of an electronic waste recycling startup.} \\
-    & {\tiny \ding{110}} \textit{Research Projects: \href{https://github.com/n2oblife/Fast_Resolution_Algorithm}{Implementation of a \textbf{Fast resolution algorithm in C++ to compute eeg signals in real time}} / \textbf{state-of-the-art in ML comparing CNN and Vision Transformer in term of inference time and ressources consumption} / course given by myself on \href{https://ieeexplore.ieee.org/document/8610326}{Inversible CMOS Logic} to introduce this field of research to students in order to follow a Naoya Onizawa conference.}
+    & {\tiny \ding{110}} \textit{\href{https://github.com/n2oblife/MITx-ML}{\textbf{Machine Learning in Python: From Linear Models to Deep Learning}} (230h).} \\
+    & {\tiny \ding{110}} \textit{Comprehensive training from \textbf{Linear Classifiers and Recommender Systems} to \textbf{Unsupervised and Reinforcement Learning}, with weekly projects to apply concepts.} \\
 \end{tabular}
 \fi
+\fctsaut{104}
 
-% prépa
-\if \mainExp 0
-{\color{black} \textbf{BSc. - Mathematics and Physics, preparatory classes}} \hspace{5mm} \MYhref[myOrange]{https://pia.ac-paris.fr/serail/jcms/s2_1470075/fr/accueil}{\textbf{Lycée Fénelon}} \hfill {\color{black}\textbf{2018 - 2021}}\\ \vspace{1mm}
+
+\if \IMT 1 % IMT Atlantique
+{\color{black} \textbf{MEng. - Embedded Systems, Excellence Program for Research}} \hspace{1mm} \MYhref[myOrange]{https://www.imt-atlantique.en}{\textbf{IMT Atlantique}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{Preparatory classes, are intensive programs designed to prepare students for admission to prestigious engineering schools in France} \\
-    & {\tiny \ding{110}} \textit{Advanced theorectical studies in \textbf{Mathematics} (algebra, analysis, geometry, and calculus), \textbf{Physics} (classical and fluidic mechanics, classical optics and wave propagation optic, electromagnetism, thermodynamics and quantum mechanics), Chemistry, IT and \textbf{algorithmy}} \\
-    & {{\tiny \ding{110}} \textit{Days of practical lab sessions to apply chapters from physics and chemistery}}
+    & {\tiny \ding{110}} \textit{3rd-ranked engineering school in France.} \\
+    & {\tiny \ding{110}} \textit{Key coursework: Mathematics (\textbf{analysis and algerba}), \href{https://github.com/n2oblife/PyRat}{\textbf{graph theory}}, \href{https://github.com/n2oblife/TSP_genetic}{logistic optimization}), Physics (RF, thermodynamics) \textbf{Computer Vision}, \textbf{Data}, Sc Computing.} \\ % Mathematics, Physics,  Sensor, LP Problems, Sc Computing, Management, Project Management, Machine Vision, Image Processing, graph theory, Developement, logistic opitmization, Data Manipulation
+    & {\tiny \ding{110}} \textit{\textbf{Embedded Systems}: \textbf{Algorithm-to-Chip Design}, Low-Level Software-Hardware Interactions (driver development, prototyping), \href{https://github.com/n2oblife/galax}{\textbf{\textbf{Parallel Computing} (bottlenecks studies)}}, and \href{https://github.com/n2oblife/EFDL}{\textbf{Deep Learning Optimization}}, \href{https://github.com/n2oblife/SDM}{Stochastic Dynamic Modeling and Baysian inference}}. \\
+    & {\tiny \ding{110}} \textit{School Projects: \href{https://github.com/n2oblife/DevOps_Orange}{\textbf{Deep Learning service DevOps}} with \href{https://www.orange.com}{Orange} / electronic waste recycling feasibility study.} \\
+    & {\tiny \ding{110}} \textit{Research: \href{https://github.com/n2oblife/Fast_Resolution_Algorithm}{\textbf{Fast EEG computation algorithm in C++}}, \textbf{ML comparison of CNN vs. Vision Transformers} (time/power efficiency), and a course on \href{https://ieeexplore.ieee.org/document/8610326}{Inversible CMOS Logic}.}
 \end{tabular}
-\fi
+\fi \fctsaut{103}
 
-% Bac
-\if \mainExp0
+
+\if \Prepa 1 % prépa
+{\color{black} \textbf{BSc. - Mathematics and Physics, Preparatory Classes}} \hspace{5mm} \MYhref[myOrange]{https://pia.ac-paris.fr/serail/jcms/s2_1470075/fr/accueil}{\textbf{Lycée Fénelon}} \hfill {\color{black}\textbf{2018 - 2021}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Intensive prep for national competitive exams to enter the top French engineering schools.} \\
+    & {\tiny \ding{110}} \textit{Advanced theoretical coursework in \textbf{Mathematics} (algebra, analysis, geometry, calculus), \textbf{Physics}, Chemistry, IT (\textbf{algorithmy}) and humanities.} \\
+    & {\tiny \ding{110}} \textit{Hands-on lab sessions in physics and chemistry to apply theoretical concepts.}
+\end{tabular}
+\fi \fctsaut{102}
+
+
+\if \Henri 1 % Bac
 {\color{black} \textbf{High School Diploma, Baccalaureat of Science}} \hspace{5mm} \MYhref[myOrange]{https://lycee-henri4.com/}{\textbf{Lycée Henri \rom{4}}} \hfill {\color{black}\textbf{2015 - 2018}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
     & {\tiny \ding{110}} \textit{A beacon of academic excellence in France, 2nd best French high school} \\
     & {\tiny \ding{110}} \textit{With Honors, studiying Sciences and specializing in \textbf{Mathematics and Computer Science}}
 \end{tabular}
-\fi
+\fi \fctsaut{101}
