--- a/sections/infos_perso.tex
+++ b/sections/infos_perso.tex
@@ -8,8 +8,8 @@
 \begin{itemize}[noitemsep]
     % \item[\faHome] {Paris}
     \item[\faPhone] \href{tel:+33651479304}{(+33) 6 51 47 93 04}
-    \item[\faAt] \href{mailto:zaccarie.kanit@imt-atlantique.net}{zaccarie.kanit@imt-atlantique.net}
+    \item[\faAt] \href{mailto:zaccarie.kanit@tum.de}{zaccarie.kanit@tum.de}
     \item[\faLinkedin] \href{https://www.linkedin.com/in/zaccarie-kanit/}{zaccarie-kanit}
     \item[\faGithub] \href{https://github.com/n2oblife}{n2oblife}
-\end{itemize}
+    \end{itemize}
 \vspace{2mm}
